kubernetes/apps/media/plex/plex-auto-languages/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plex-auto-languages
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: plex-auto-languages
  egress:
    # plex
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP

    - toFQDNs:
        - matchName: plex.tv
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
